--- a/openvidu-components-angular/projects/openvidu-components-angular/package.json
+++ b/openvidu-components-angular/projects/openvidu-components-angular/package.json
@@ -5,6 +5,7 @@
 	"name": "openvidu-components-angular",
 	"peerDependencies": {
 		"@angular/animations": "^17.0.0 || ^18.0.0",
+		"@angular/cdk": "^17.0.0 || ^18.0.0",
 		"@angular/common": "^17.0.0 || ^18.0.0",
 		"@angular/core": "^17.0.0 || ^18.0.0",
 		"@angular/forms": "^17.0.0 || ^18.0.0",
