--- a/.github/workflows/openvidu-components-angular-E2E.yml
+++ b/.github/workflows/openvidu-components-angular-E2E.yml
@@ -73,7 +73,7 @@ jobs:
           git clone --depth 1 https://github.com/OpenVidu/openvidu-call
           cd openvidu-call/backend
           npm install
-          npm run dev &
+          npm run dev:start &
       - name: Install dependencies
         run: |
           cd openvidu-components-angular
@@ -130,7 +130,7 @@ jobs:
           git clone --depth 1 https://github.com/OpenVidu/openvidu-call
           cd openvidu-call/backend
           npm install
-          npm run dev &
+          npm run dev:start &
       - name: Install dependencies
         run: |
           cd openvidu-components-angular
@@ -187,7 +187,7 @@ jobs:
           git clone --depth 1 https://github.com/OpenVidu/openvidu-call
           cd openvidu-call/backend
           npm install
-          npm run dev &
+          npm run dev:start &
       - name: Install dependencies
         run: |
           cd openvidu-components-angular
@@ -243,7 +243,7 @@ jobs:
           git clone --depth 1 https://github.com/OpenVidu/openvidu-call
           cd openvidu-call/backend
           npm install
-          npm run dev &
+          npm run dev:start &
       - name: Install dependencies
         run: |
           cd openvidu-components-angular
@@ -300,7 +300,7 @@ jobs:
           git clone --depth 1 https://github.com/OpenVidu/openvidu-call
           cd openvidu-call/backend
           npm install
-          npm run dev &
+          npm run dev:start &
       - name: Install dependencies
         run: |
           cd openvidu-components-angular
@@ -356,7 +356,7 @@ jobs:
           git clone --depth 1 https://github.com/OpenVidu/openvidu-call
           cd openvidu-call/backend
           npm install
-          npm run dev &
+          npm run dev:start &
       - name: Install dependencies
         run: |
           cd openvidu-components-angular
@@ -412,7 +412,7 @@ jobs:
           git clone --depth 1 https://github.com/OpenVidu/openvidu-call
           cd openvidu-call/backend
           npm install
-          npm run dev &
+          npm run dev:start &
       - name: Install dependencies
         run: |
           cd openvidu-components-angular
@@ -468,7 +468,7 @@ jobs:
           git clone --depth 1 https://github.com/OpenVidu/openvidu-call
           cd openvidu-call/backend
           npm install
-          npm run dev &
+          npm run dev:start &
       - name: Install dependencies
         run: |
           cd openvidu-components-angular
@@ -525,7 +525,7 @@ jobs:
           git clone --depth 1 https://github.com/OpenVidu/openvidu-call
           cd openvidu-call/backend
           npm install
-          npm run dev &
+          npm run dev:start &
       - name: Install dependencies
         run: |
           cd openvidu-components-angular
@@ -581,7 +581,7 @@ jobs:
           git clone --depth 1 https://github.com/OpenVidu/openvidu-call
           cd openvidu-call/backend
           npm install
-          npm run dev &
+          npm run dev:start &
       - name: Install dependencies
         run: |
           cd openvidu-components-angular
