--- a/openvidu-components-angular/package.json
+++ b/openvidu-components-angular/package.json
@@ -23,14 +23,12 @@
     "@angular/compiler-cli": "18.2.5",
     "@angular/elements": "18.2.5",
     "@compodoc/compodoc": "^1.1.25",
-    "@types/chai": "4.3.19",
     "@types/dom-mediacapture-transform": "0.1.9",
     "@types/dom-webcodecs": "0.1.11",
-    "@types/mocha": "9.1.1",
+    "@types/jasmine": "^5.1.4",
     "@types/node": "20.12.14",
     "@types/selenium-webdriver": "4.1.16",
     "@types/ws": "^8.5.12",
-    "chai": "4.3.10",
     "chromedriver": "129.0.0",
     "concat": "^1.0.3",
     "cross-env": "^7.0.3",
@@ -50,7 +48,6 @@
     "karma-mocha-reporter": "2.2.5",
     "karma-notify-reporter": "1.3.0",
     "lint-staged": "^15.2.10",
-    "mocha": "9.2.2",
     "ng-packagr": "18.2.1",
     "npm-watch": "^0.13.0",
     "prettier": "3.3.3",
