--- a/openvidu-components-angular/projects/openvidu-components-angular/tsconfig.spec.json
+++ b/openvidu-components-angular/projects/openvidu-components-angular/tsconfig.spec.json
@@ -8,7 +8,8 @@
       "node"
     ],
     "moduleResolution": "node",
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "resolveJsonModule": true
   },
   "files": [
     "src/test.ts"
