--- a/openvidu-testapp/package.json
+++ b/openvidu-testapp/package.json
@@ -24,8 +24,8 @@
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "json-stringify-safe": "5.0.1",
-    "livekit-client": "2.5.7",
-    "livekit-server-sdk": "2.7.0",
+    "livekit-client": "^2.5.9",
+    "livekit-server-sdk": "^2.7.2",
     "lodash": "^4.17.21",
     "rxjs": "~7.8.1",
     "stream-browserify": "^3.0.0",
