--- a/openvidu-test-browsers/pom.xml
+++ b/openvidu-test-browsers/pom.xml
@@ -89,8 +89,8 @@
 		</dependency>
 		<dependency>
 			<groupId>io.openvidu</groupId>
-			<artifactId>openvidu-java-client</artifactId>
-			<version>${version.openvidu.java.client}</version>
+			<artifactId>openvidu-java-client-v2compatibility</artifactId>
+			<version>${version.openvidu.java.client.v2compatibility}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
