--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,7 @@
 	<properties>
 
 		<version.spring-boot>2.7.18</version.spring-boot>
-		<version.openvidu.java.client>2.30.0</version.openvidu.java.client>
-		<!-- <version.openvidu.client>1.1.0</version.openvidu.client> -->
+		<version.openvidu.java.client.v2compatibility>3.0.0</version.openvidu.java.client.v2compatibility>
 		<version.openvidu.test.browsers>1.1.0</version.openvidu.test.browsers>
 		<version.openvidu.test.e2e>1.1.1</version.openvidu.test.e2e>
 
