--- a/openvidu-testapp/package.json
+++ b/openvidu-testapp/package.json
@@ -21,12 +21,12 @@
     "@angular/platform-browser": "^16.2.11",
     "@angular/platform-browser-dynamic": "^16.2.11",
     "@angular/router": "^16.2.11",
-    "@livekit/protocol": "^1.27.1",
+    "@livekit/protocol": "1.29.2",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "json-stringify-safe": "5.0.1",
-    "livekit-client": "^2.5.9",
-    "livekit-server-sdk": "^2.7.2",
+    "livekit-client": "2.7.0",
+    "livekit-server-sdk": "^2.9.2",
     "lodash": "^4.17.21",
     "rxjs": "~7.8.1",
     "stream-browserify": "^3.0.0",
