--- a/.github/workflows/openvidu-integration-tests.yml
+++ b/.github/workflows/openvidu-integration-tests.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   integration-tests:
-    name: Backend tests
+    name: Integration tests
     timeout-minutes: 30
     runs-on: ubuntu-latest
     steps:
