deployment: Fixing v2 references in installation and automation scripts
- Replace docker 'master' references with 'master-v2'.
- Replace 'master' with 'v2' in installation scripts.

--- a/openvidu-server/deployments/pro/aws/cfn-mkt-kms-ami.yaml.template
+++ b/openvidu-server/deployments/pro/aws/cfn-mkt-kms-ami.yaml.template
@@ -103,7 +103,7 @@ Resources:
                   for IMAGE in "${IMAGES[@]}"
                   do
                       # Replace the image tag in the YAML file
-                      sed -i "s,$IMAGE:.*,${IMAGE}:master,g" docker-compose.yml
+                      sed -i "s,$IMAGE:.*,${IMAGE}:master-v2,g" docker-compose.yml
                   done
 
                   # Docker pull of the images
