--- a/openvidu-server/deployments/enterprise/aws/cfn-crete-ov-aws-asg-ami.yaml.template
+++ b/openvidu-server/deployments/enterprise/aws/cfn-crete-ov-aws-asg-ami.yaml.template
@@ -89,7 +89,7 @@ Resources:
                   IMAGES="$(cat docker-compose.yml | grep 'image: openvidu/' | cut -d':' -f2 | sed -e 's/^[[:space:]]*//')"
                   for IMG in $IMAGES
                   do
-                    sed -i "s|image: $IMG:.*|image: $IMG:master|g" docker-compose.yml
+                    sed -i "s|image: $IMG:.*|image: $IMG:master-v2|g" docker-compose.yml
                   done
 
                   # docker-compose.override.yml replace with master version
@@ -97,7 +97,7 @@ Resources:
                     IMAGES="$(cat docker-compose.override.yml | grep 'image: openvidu/' | cut -d':' -f2 | sed -e 's/^[[:space:]]*//')"
                     for IMG in $IMAGES
                     do
-                      sed -i "s|image: $IMG:.*|image: $IMG:master|g" docker-compose.override.yml
+                      sed -i "s|image: $IMG:.*|image: $IMG:master-v2|g" docker-compose.override.yml
                     done
                   fi
 
