--- a/openvidu-server/deployments/enterprise/aws/dev/cfn-crete-ov-aws-asg-ami.yaml.template
+++ b/openvidu-server/deployments/enterprise/aws/dev/cfn-crete-ov-aws-asg-ami.yaml.template
@@ -80,7 +80,7 @@ Resources:
 
                 # Install openvidu-pro
                 cd /opt
-                if [[ "OPENVIDU_VERSION" == "master" ]]; then
+                if [[ "OPENVIDU_VERSION" == "master-v2" ]]; then
                   curl https://raw.githubusercontent.com/OpenVidu/openvidu/v2/openvidu-server/deployments/enterprise/docker-compose/install_openvidu_enterprise_master_node.sh | bash
                 else
                   curl https://raw.githubusercontent.com/OpenVidu/openvidu/vOPENVIDU_VERSION/openvidu-server/deployments/enterprise/docker-compose/install_openvidu_enterprise_master_node.sh | bash
@@ -93,7 +93,7 @@ Resources:
                   IMAGES="$(cat docker-compose.yml | grep 'image: openvidu/' | cut -d':' -f2 | sed -e 's/^[[:space:]]*//')"
                   for IMG in $IMAGES
                   do
-                    sed -i "s|image: $IMG:.*|image: $IMG:master|g" docker-compose.yml
+                    sed -i "s|image: $IMG:.*|image: $IMG:master-v2|g" docker-compose.yml
                   done
 
                   # docker-compose.override.yml replace with master version
@@ -101,7 +101,7 @@ Resources:
                     IMAGES="$(cat docker-compose.override.yml | grep 'image: openvidu/' | cut -d':' -f2 | sed -e 's/^[[:space:]]*//')"
                     for IMG in $IMAGES
                     do
-                      sed -i "s|image: $IMG:.*|image: $IMG:master|g" docker-compose.override.yml
+                      sed -i "s|image: $IMG:.*|image: $IMG:master-v2|g" docker-compose.override.yml
                     done
                   fi
 
