tests-e2e: Allowed unzip deflated and non deflated file

--- a/openvidu-test-browsers/pom.xml
+++ b/openvidu-test-browsers/pom.xml
@@ -102,6 +102,11 @@
 			<artifactId>java-client</artifactId>
 			<version>${version.appium}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-compress</artifactId>
+			<version>1.21</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
