--- a/openvidu-test-e2e/pom.xml
+++ b/openvidu-test-e2e/pom.xml
@@ -50,13 +50,13 @@
 		<openvidu.scm.url>https://github.com/OpenVidu/openvidu</openvidu.scm.url>
 		<openvidu.scm.connection>git@github.com:OpenVidu/openvidu.git</openvidu.scm.connection>
 
-		<version.spring-boot>2.7.18</version.spring-boot>
-		<version.surefire.plugin>3.0.0-M7</version.surefire.plugin>
-		<version.selenium>4.12.1</version.selenium>
-		<version.gson>2.10</version.gson>
+		<version.spring-boot>3.4.1</version.spring-boot>
+		<version.surefire.plugin>3.5.2</version.surefire.plugin>
+		<version.selenium>4.27.0</version.selenium>
+		<version.gson>2.11.0</version.gson>
 		<version.livekit-server>0.8.3</version.livekit-server>
-		<version.testcontainers>1.17.6</version.testcontainers>
-		<version.dockerjava>3.2.13</version.dockerjava>
+		<version.testcontainers>1.20.4</version.testcontainers>
+		<version.dockerjava>3.4.1</version.dockerjava>
 		<version.stringsimilarity>2.0.0</version.stringsimilarity>
 		<version.openvidu-test-browsers>1.1.0</version.openvidu-test-browsers>
 	</properties>
