deployment & openvidu-server: Bump to jdk 21

--- a/openvidu-server/pom.xml
+++ b/openvidu-server/pom.xml
@@ -236,6 +236,16 @@
 			<version>${version.dockerjava}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.docker-java</groupId>
+			<artifactId>docker-java-transport-okhttp</artifactId>
+			<version>${version.dockerjava}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.docker-java</groupId>
+			<artifactId>docker-java-api</artifactId>
+			<version>${version.dockerjava}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.codehaus.janino</groupId>
 			<artifactId>janino</artifactId>
 			<version>${version.janino}</version>
